--- a/static/templates/hello.html
+++ b/static/templates/hello.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Welcome</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 </head>
 <body>
 	<h1>Hello!</h1>
