--- a/static/templates/list.html
+++ b/static/templates/list.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Listify</title>
+	<title>Exercises</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 </head>
 <body>
-	{% for exercise in exercises %}
-    	{# Each "contact" is a Contact model object. #}
-    	{{ contact.full_name|upper }}<br />
-	{% endfor %}
+    <div class="pagination">
+        <span class="step-links">
+            <h1>
+                {% for exercise in exercises %}
+                    {{exercise}}
+                    <form action="submitExercise" method="POST">
+                        <input type="text" class="form-control" name="patientExerciseDataInput">
+                        <br><button type="submit" class="btn btn-default">Go!</button>
+                    </form>
+                {% endfor %}
+            </h1>
+             {% if exercises.has_next %}
+                <a href="?page={{ exercises.next_page_number }}">Next</a>
+            {% endif %}
 
-<div class="pagination">
-    <span class="step-links">
-        <h1>
-            {% for exercise in exercises %}
-                {{exercise}}
-                <form action="submitExercise">
-                    <input type="text" class="form-control" name="patientExerciseDataInput"></label>
-                    <br><button type="submit" class="btn btn-default">Go!</button>
-                </form>
-            {% endfor %}
-        </h1>
-        {% if exercises.has_next %}
-            <a href="?page={{ exercises.next_page_number }}">Next</a>
-        {% endif %}
+            <span class="current">
+                Page {{ exercises.number }} of {{ exercises.paginator.num_pages }}.
+            </span>
 
-        <span class="current">
-            Page {{ exercises.number }} of {{ exercises.paginator.num_pages }}.
+            {% if exercises.has_previous %}
+                <a href="?page={{ exercises.previous_page_number }}">Previous</a>
+            {% endif %}
         </span>
-
-        {% if exercises.has_previous %}
-            <a href="?page={{ exercises.previous_page_number }}">Previous</a>
-        {% endif %}
-    </span>
-</div>
+    </div>
 </body>
 </html>
