Took off middle background

--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -119,8 +119,7 @@ html {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background-image: url("https://ununsplash.imgix.net/41/Vgu1RUfKT3WN1ZYxSWaR_14672519443_13d8873062_k.jpg?q=75&fm=jpg&s=18b79c01949f4c839d7709bc8818787e");
-    background-size: 100%;
+    background-color: #eee;
     background-repeat: no-repeat;
 }
 
